// Diagrama do Banco de Dados — Prospecção Tecnológica (PFC)
// GERADO por scripts/generate_db_schema_docs.py a partir dos modelos SQLAlchemy - não editar à mão.
// Grupo 1 (sessão, db/research_session_models.py) + Grupo 4 (configuração, db/config_models.py).
// Cole em https://dbdiagram.io/home (New Diagram > cole no editor DBML).

Table research_session {
  id integer [pk]
  public_id varchar [unique, not null]
  name varchar
  completed boolean [not null]
  completed_at datetime [note: "setado uma vez, quando completed vira true"]
  patent_source varchar
  scholarly_source varchar
  current_step integer [not null, note: "passo do wizard onde a sessão parou (retomada)"]
  current_substep integer [note: "subpasso do wizard (retomada)"]
  relevance_threshold float [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table session_input {
  id integer [pk]
  session_id integer [not null]
  parent_id integer [note: "self - refino do input raiz"]
  theme varchar [not null]
  description text
  area_of_study varchar
  keywords json
  year_from integer
  year_to integer
  iterations integer [not null]
}

Table session_probe_query {
  id integer [pk]
  session_id integer [not null]
  fonte varchar [not null, note: "ops | scopus"]
  tipo varchar [note: "null=probe | specific|balanced|generic"]
  parent_id integer [note: "self - query final refina a query probe"]
  query_text text [not null]
  fields json
  year_from integer
  year_to integer
  complexity_score float
  complexity_level varchar
  result_count integer [note: "tamanho da amostra baixada"]
  iterations integer [not null]
  created_at datetime [not null]

  indexes {
    (session_id, fonte, tipo) [unique]
  }
}

Table session_ai_call {
  id integer [pk]
  session_id integer [not null]
  step varchar [not null]
  provider varchar [not null]
  model varchar [not null]
  duration_ms float [not null]
  input_tokens integer
  output_tokens integer
  total_tokens integer
  attempts integer [not null]
  created_at datetime [not null]
}

Table patent {
  id integer [pk]
  dedup_key varchar [unique, not null]
  source varchar [not null]
  source_record_id varchar
  title text [not null]
  abstract text
  publication_number varchar
  application_number varchar
  family_id varchar
  applicants json
  inventors json
  ipc_codes json
  cpc_codes json
  filing_date varchar
  publication_date varchar
  grant_date varchar
  year integer
  legal_status varchar
  country varchar
  created_at datetime [not null]
}

Table article {
  id integer [pk]
  dedup_key varchar [unique, not null]
  source varchar [not null]
  source_record_id varchar
  title text [not null]
  abstract text
  doi varchar
  authors json
  affiliations json
  affiliation_countries json
  journal_or_source varchar
  volume varchar
  issue varchar
  pages varchar
  publication_date varchar
  year integer
  keywords json
  field_of_study json
  citations integer
  created_at datetime [not null]
}

Table probe_query_patent {
  id integer [pk]
  probe_query_id integer [not null]
  patent_id integer [not null]
  relevance_score float
  created_at datetime [not null]

  indexes {
    (probe_query_id, patent_id) [unique]
  }
}

Table probe_query_article {
  id integer [pk]
  probe_query_id integer [not null]
  article_id integer [not null]
  relevance_score float
  created_at datetime [not null]

  indexes {
    (probe_query_id, article_id) [unique]
  }
}

Table probe_query_term {
  id integer [pk]
  probe_query_id integer [not null]
  term varchar [not null]
  score float [not null]
  frequency integer [not null]
  selected boolean [not null]
  created_at datetime [not null]

  indexes {
    (probe_query_id, term) [unique]
  }
}

Table session_chart {
  id integer [pk]
  probe_query_id integer [not null]
  document_type varchar [not null, note: "patent | article"]
  chart_type varchar [not null, note: "s_curve|yearly_volume|top_depositants|top_institutions|top10_heatmap"]
  object_key varchar [not null, note: "PNG no MinIO"]
  content_type varchar [not null]
  projection_years integer [note: "só s_curve"]
  fit_quality json [note: "só s_curve: r_squared/reliable/warning"]
  summary json [note: "resumo numérico do gráfico (texto dos Resultados)"]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (probe_query_id, chart_type) [unique]
  }
}

Table session_report_section {
  id integer [pk]
  session_id integer [not null]
  section_key varchar [not null, note: "objetivo|introducao|informacoes_*|tendencias_ciclo_vida|conclusao|finalidade|metodologia|..."]
  rag_context text [note: "trechos do RAG enviados ao LLM"]
  sources json [note: "citações (AUTOR, ano) + entrada ABNT"]
  generated_text text [note: "já escapado para LaTeX"]
  status varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (session_id, section_key) [unique]
  }
}

Table session_report {
  id integer [pk]
  session_id integer [unique, not null]
  tex_object_key varchar [not null, note: "main.tex no MinIO (+ main.assembled.tex)"]
  pdf_object_key varchar
  status varchar [not null, note: "tex_ready | complete | pdf_failed"]
  assemble_payload json [note: "capa/assinaturas/quadro - reusado no Remontar"]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table app_settings {
  key varchar [pk, note: "ex.: rag_relative_min_relevance, languagetool_language"]
  value text [not null]
  value_type varchar [not null]
  category varchar [not null]
  is_secret boolean [not null]
  min_value float
  max_value float
  step float
  label varchar
  description text
  default_value text
  updated_at datetime [not null]
}

Table llm_provider_configs {
  id integer [pk]
  provider_code varchar [not null]
  model varchar [not null]
  api_key varchar [not null]
  base_url varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (provider_code, base_url, model) [unique]
  }
}

Table llm_call_site_bindings {
  call_site varchar [pk, note: "theme_candidates|probe_query|final_query|report_writing|report_review"]
  config_id integer [not null]
  updated_at datetime [not null]
}

Table search_api_selection {
  family varchar [pk, note: "patent | scholarly"]
  active_provider_code varchar [not null]
  updated_at datetime [not null]
}

Ref: session_input.session_id > research_session.id
Ref: session_input.parent_id > session_input.id
Ref: session_probe_query.session_id > research_session.id
Ref: session_probe_query.parent_id > session_probe_query.id
Ref: session_ai_call.session_id > research_session.id
Ref: probe_query_patent.probe_query_id > session_probe_query.id
Ref: probe_query_patent.patent_id > patent.id
Ref: probe_query_article.probe_query_id > session_probe_query.id
Ref: probe_query_article.article_id > article.id
Ref: probe_query_term.probe_query_id > session_probe_query.id
Ref: session_chart.probe_query_id > session_probe_query.id
Ref: session_report_section.session_id > research_session.id
Ref: session_report.session_id > research_session.id
Ref: llm_call_site_bindings.config_id > llm_provider_configs.id
